WIP - feat: port to 1.20 fabric